# cpp-unit-testing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  coverage_dummy.cpp  coverage_runner.cpp
configuration/: CMakeLists.txt
examples/: CMakeLists.txt  README.md  project_structure.md  test_example.cpp
tests/: CMakeLists.txt  test_example.cpp
unit_tests/: CMakeLists.txt
utils/: assert.h
